· Normalized *Specified XML Serialization property implementation · Asyn/await changes ( WIP ) · Renamed TlsProceed to ProceedTls · Added GetErrorMessage to SaslFailure class

--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Core\SaslAuth.cs" />
     <Compile Include="Core\SaslChallenge.cs" />
     <Compile Include="Core\SaslFailure.cs" />
+    <Compile Include="Core\SaslFailure.Custom.cs" />
     <Compile Include="Core\SaslFailureType.cs" />
     <Compile Include="Core\SaslMechanisms.cs" />
     <Compile Include="Core\SaslMechanisms.Custom.cs" />
