--- a/tests/Conversa.Net.Xmpp.Tests/packages.config
+++ b/tests/Conversa.Net.Xmpp.Tests/packages.config
@@ -5,9 +5,10 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable-win81+wpa81" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable-win81+wpa81" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-win81+wpa81" />
-  <package id="xunit" version="2.0.0-beta5-build2785" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.abstractions" version="2.0.0-beta5-build2785" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.assert" version="2.0.0-beta5-build2785" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.core" version="2.0.0-beta5-build2785" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.extensibility.execution" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="portable-win81+wpa81" />
 </packages>
