--- a/tests/Conversa.Net.Xmpp.Tests/packages.config
+++ b/tests/Conversa.Net.Xmpp.Tests/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rx-Core" version="2.2.5" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="portable-win81+wpa81" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable-win81+wpa81" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="portable-win81+wpa81" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable-win81+wpa81" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
-  <package id="xunit" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-win81+wpa81" />
   <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
   <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
+  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
   <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.extensibility.execution" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
   <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="portable-win81+wpa81" />
 </packages>
