· Client capabilities advertising · Fix for presence response addressing in XmppMessageProcessor class

--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Capabilities\EntityCapabilities.cs" />
     <Compile Include="Capabilities\XmppEntityCapabilities.cs" />
     <Compile Include="Client\XmppClient.cs" />
-    <Compile Include="Client\XmppClientCapabilities.cs" />
+    <Compile Include="Capabilities\XmppClientCapabilities.cs" />
     <Compile Include="Client\XmppClientState.cs" />
     <Compile Include="Core\XmppCodes.cs" />
     <Compile Include="Client\XmppConnectionString.cs" />
