--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -130,7 +130,7 @@
     <Compile Include="Client\Hub.cs" />
     <Compile Include="Client\StanzaHub.cs" />
     <Compile Include="Core\IStanza.cs" />
-    <Compile Include="Core\Messaage.Custom.cs" />
+    <Compile Include="Core\Message.Custom.cs" />
     <Compile Include="Core\RosterItem.Custom.cs" />
     <Compile Include="Core\XmppCodes.cs" />
     <Compile Include="Client\XmppConnectionString.cs" />
