--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Client\XmppException.cs" />
     <Compile Include="Client\ClientHub.cs" />
     <Compile Include="Extensions\ConcurrentBagExtensions.cs" />
+    <Compile Include="Instant Messaging\ContactBlockingAction.cs" />
+    <Compile Include="Instant Messaging\ContactListChangedAction.cs" />
     <Compile Include="Xml\StreamElement.cs" />
     <Compile Include="Client\ServerFeatures.cs" />
     <Compile Include="Xml\StreamParser.cs" />
