--- a/tests/Conversa.Net.Xmpp.Tests/Conversa.Net.Xmpp.Tests.csproj
+++ b/tests/Conversa.Net.Xmpp.Tests/Conversa.Net.Xmpp.Tests.csproj
@@ -42,10 +42,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="InfoQueryTest.cs" />
+    <Compile Include="ConnectionStringHelper.cs" />
+    <Compile Include="ContactTest.cs" />
+    <Compile Include="RosterSerializationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreamFeaturesTest.cs" />
-    <Compile Include="StreamTest.cs" />
+    <Compile Include="StreamFeaturesSerializationTest.cs" />
+    <Compile Include="StreamSerializationTest.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="XmppAddressTest.cs" />
     <Compile Include="XmppClientTest.cs" />
@@ -81,6 +83,9 @@
     </Reference>
     <Reference Include="xunit.execution.universal, Version=2.0.0.2826, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\xunit.extensibility.execution.2.0.0-rc1-build2826\lib\portable-wpa81+win81\xunit.execution.universal.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.runner.utility.universal">
+      <HintPath>..\..\packages\xunit.runner.utility.2.0.0-rc1-build2826\lib\portable-wpa81+win81\xunit.runner.utility.universal.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
