--- a/tests/Conversa.Net.Xmpp.Tests/packages.config
+++ b/tests/Conversa.Net.Xmpp.Tests/packages.config
@@ -9,6 +9,7 @@
   <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
   <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
   <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
-  <package id="xunit.extensibility.execution" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" />
+  <package id="xunit.extensibility.execution" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
+  <package id="xunit.runner.utility" version="2.0.0-rc1-build2826" targetFramework="portable-win81+wpa81" requireReinstallation="True" />
   <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="portable-win81+wpa81" />
 </packages>
