· Mimic parts of Windows.ApplicationModel.Chat
· Mimic parts of Windows.ApplicationModel.Chat

--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -315,9 +315,9 @@
     <Compile Include="Client\Transports\ITransport.cs" />
     <Compile Include="Client\Transports\TcpTransport.cs" />
     <Compile Include="Client\Transports\TransportState.cs" />
-    <Compile Include="Client\XmppClient.cs" />
-    <Compile Include="Client\XmppClientPresence.cs" />
-    <Compile Include="Client\XmppClientState.cs" />
+    <Compile Include="Client\XmppTransport.cs" />
+    <Compile Include="Client\XmppTransportPresence.cs" />
+    <Compile Include="Client\XmppTransportState.cs" />
     <Compile Include="Client\XmppConnectionString.cs" />
     <Compile Include="Client\XmppConnectionStringBuilder.cs" />
     <Compile Include="Client\XmppException.cs" />
@@ -430,12 +430,42 @@
     <Compile Include="In-Band Registration\RegisterType.cs" />
     <Compile Include="Instant Messaging\Avatar.cs" />
     <Compile Include="Instant Messaging\AvatarStorage.cs" />
+    <Compile Include="Instant Messaging\ChatCapabilities.cs" />
+    <Compile Include="Instant Messaging\ChatCapabilitiesManager.cs" />
+    <Compile Include="Instant Messaging\ChatConversation.cs" />
+    <Compile Include="Instant Messaging\ChatConversationThreadingInfo.cs" />
+    <Compile Include="Instant Messaging\ChatConversationThreadingKind.cs" />
+    <Compile Include="Instant Messaging\ChatMessage.cs" />
+    <Compile Include="Instant Messaging\ChatMessageAttachment.cs" />
+    <Compile Include="Instant Messaging\ChatMessageBlocking.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChange.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChangedDeferral.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChangedEventArgs.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChangeReader.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChangeTracker.cs" />
+    <Compile Include="Instant Messaging\ChatMessageChangeType.cs" />
+    <Compile Include="Instant Messaging\ChatMessageKind.cs" />
+    <Compile Include="Client\XmppTransportManager.cs" />
+    <Compile Include="Instant Messaging\ChatMessageOperatorKind.cs" />
+    <Compile Include="Instant Messaging\ChatMessageReader.cs" />
+    <Compile Include="Instant Messaging\ChatMessageStatus.cs" />
+    <Compile Include="Instant Messaging\ChatMessageStore.cs" />
+    <Compile Include="Client\XmppTransportConfiguration.cs" />
+    <Compile Include="Client\XmppTransportKind.cs" />
+    <Compile Include="Instant Messaging\ChatMessageValidationResult.cs" />
+    <Compile Include="Instant Messaging\ChatMessageValidationStatus.cs" />
+    <Compile Include="Instant Messaging\ChatQueryOptions.cs" />
+    <Compile Include="Instant Messaging\ChatRecipientDeliveryInfo.cs" />
+    <Compile Include="Instant Messaging\ChatSearchReader.cs" />
+    <Compile Include="Client\XmppTransportErrorCodeCategory.cs" />
+    <Compile Include="Client\XmppTransportInterpretedErrorCode.cs" />
     <Compile Include="Instant Messaging\Contact.cs" />
     <Compile Include="Instant Messaging\ContactBlockingAction.cs" />
     <Compile Include="Instant Messaging\ContactList.cs" />
     <Compile Include="Instant Messaging\ContactListChangedAction.cs" />
     <Compile Include="Instant Messaging\ContactResource.cs" />
     <Compile Include="Instant Messaging\ContactResourcePresence.cs" />
+    <Compile Include="Instant Messaging\RemoteParticipantComposingChangedEventArgs.cs" />
     <Compile Include="Instant Messaging\RosterEx.cs" />
     <Compile Include="Instant Messaging\RosterExItem.cs" />
     <Compile Include="Instant Messaging\RosterExItemAction.cs" />
@@ -471,6 +501,9 @@
     <Compile Include="Multi-User Chat\MucUserInvite.cs" />
     <Compile Include="Multi-User Chat\MucUserItem.cs" />
     <Compile Include="Multi-User Chat\MucUserStatus.cs" />
+    <Compile Include="Mvvm\BindableBase.cs" />
+    <Compile Include="Mvvm\MayBe.cs" />
+    <Compile Include="Mvvm\PropertyManager.cs" />
     <Compile Include="Ping\ping.cs" />
     <Compile Include="Privacy\Privacy.cs" />
     <Compile Include="Privacy\PrivacyAction.cs" />
