--- a/src/Conversa.Net.Xmpp/project.json
+++ b/src/Conversa.Net.Xmpp/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Rx-Main": "2.2.5"
+    "Rx-Main": "2.2.5",
+    "SQLite.Net.Async-PCL": "3.0.5"
   },
   "frameworks": {
     "uap10.0": {}
