--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -578,18 +578,18 @@
     <None Include="XMPP Registry\xdv-prefixes.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\DB\DataProviders\Velox.DB.Sqlite\Velox.DB.Sqlite.UWP.csproj">
+      <Project>{887d47c1-6d25-4fb4-9122-55096973aba8}</Project>
+      <Name>Velox.DB.Sqlite.UWP</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\DB\Velox.DB\Velox.DB.UWP.csproj">
+      <Project>{4ac94060-3fc5-4647-8223-59a943bc7ccf}</Project>
+      <Name>Velox.DB.UWP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Conversa.Shared\Conversa.Shared.csproj">
       <Project>{6ddecf31-15ef-4297-9d45-edd35488ad4c}</Project>
       <Name>Conversa.Shared</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <SDKReference Include="Microsoft.VCLibs, Version=14.0">
-      <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
-    </SDKReference>
-    <SDKReference Include="SQLite.UAP.2015, Version=3.8.11.1">
-      <Name>SQLite for Universal App Platform</Name>
-    </SDKReference>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
