--- a/src/Conversa.Net.Xmpp/project.json
+++ b/src/Conversa.Net.Xmpp/project.json
@@ -1,8 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Rx-Main": "2.2.5",
-    "SQLiteNetExtensions.Async": "1.3.0"
+    "Rx-Main": "2.2.5"
   },
   "frameworks": {
     "uap10.0": {}
