--- a/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
+++ b/src/Conversa.Net.Xmpp/Conversa.Net.Xmpp.csproj
@@ -578,11 +578,11 @@
     <None Include="XMPP Registry\xdv-prefixes.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\DB\DataProviders\Velox.DB.Sqlite\Velox.DB.Sqlite.UWP.csproj">
+    <ProjectReference Include="..\..\externals\Velox.DB\DataProviders\Velox.DB.Sqlite\Velox.DB.Sqlite.UWP.csproj">
       <Project>{887d47c1-6d25-4fb4-9122-55096973aba8}</Project>
       <Name>Velox.DB.Sqlite.UWP</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\DB\Velox.DB\Velox.DB.UWP.csproj">
+    <ProjectReference Include="..\..\externals\Velox.DB\Velox.DB\Velox.DB.UWP.csproj">
       <Project>{4ac94060-3fc5-4647-8223-59a943bc7ccf}</Project>
       <Name>Velox.DB.UWP</Name>
     </ProjectReference>
